@@ -1,5 +1,12 @@
 2007-09-21  Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy-gtk/empathy-status-icon.c: Tooltip for subscription request
+	shouldn't display "Message:" if the message is empty. Fixes bug #459538
+	(Cosimo Cecchi).
+	Do not update tooltip each time the icon change.
+
+2007-09-21  Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/empathy-chat-window.c: Do not set "new message" in
 	the title of conversation windows, it's useless. Fixes bug #459523.
 
